# CityPowerManager

./: CMakeLists.txt  Makefile.bat  README.md
data/: commercial_subscribers.csv  industrial_subscribers.csv  residential_subscribers.csv  tariffs.csv
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8hpp.html  app_8hpp.js  ascii__art_8hpp.html  ascii__art_8hpp.js  billing__system_8cpp.html  billing__system_8hpp.html  billing__system_8hpp.js  class_app-members.html  class_app.html  class_app.js  class_billing_system-members.html  class_billing_system.html  class_billing_system.js  class_commercial_subscriber-members.html  class_commercial_subscriber.html  class_commercial_subscriber.js  class_commercial_tariff-members.html  class_commercial_tariff.html  class_commercial_tariff.js  class_file_i_o-members.html  class_file_i_o.html  class_file_i_o.js  class_industrial_subscriber-members.html  class_industrial_subscriber.html  class_industrial_subscriber.js  class_industrial_tariff-members.html  class_industrial_tariff.html  class_industrial_tariff.js  class_residential_subscriber-members.html  class_residential_subscriber.html  class_residential_subscriber.js  class_residential_tariff-members.html  class_residential_tariff.html  class_residential_tariff.js  class_subscriber-members.html  class_subscriber.html  (+67 more)
docs/latex/: annotated.tex  app_8cpp.tex  app_8hpp.tex  ascii__art_8hpp.tex  billing__system_8cpp.tex  billing__system_8hpp.tex  class_app.tex  class_billing_system.tex  class_commercial_subscriber.eps  files.tex  (+44 more)
src/: main.cpp
(+80 files in other folders)
